--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "citizen": "file:.tmp/citizen",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "http-proxy": "^1.18.1"
   }
 }
